--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <link rel="stylesheet" type="text/css" href="homework.css">
+        <link rel="stylesheet" type="text/css" href="index1.css">
         <script src="https://kit.fontawesome.com/1b1a6e3f00.js" crossorigin="anonymous"></script>
         <title>Apple replica</title>
     </head>
